--- a/sample_project/.vscode/settings.json
+++ b/sample_project/.vscode/settings.json
@@ -2,5 +2,17 @@
   "C_Cpp.intelliSenseEngine": "default",
   "idf.portWin": "COM3",
   "idf.flashType": "UART",
-  "idf.adapterTargetName": "esp32"
+  "idf.adapterTargetName": "esp32",
+  "files.associations": {
+    "array": "c",
+    "charconv": "c",
+    "compare": "c",
+    "complex": "c",
+    "functional": "c",
+    "ratio": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "utility": "c",
+    "variant": "c"
+  }
 }
