--- a/sample_project/.vscode/settings.json
+++ b/sample_project/.vscode/settings.json
@@ -13,6 +13,7 @@
     "tuple": "c",
     "type_traits": "c",
     "utility": "c",
-    "variant": "c"
+    "variant": "c",
+    "inttypes.h": "c"
   }
 }
